# zk-fragment

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
crates/zk-fragment-core/: Cargo.toml
crates/zk-fragment-core/src/: engine.rs  lib.rs
crates/zk-fragment-core/src/boundary/: commitment.rs  detector.rs  mod.rs  routing.rs
crates/zk-fragment-core/src/fragment/: metrics.rs  mod.rs  spec.rs  validator.rs
crates/zk-fragment-core/src/strategy/: balanced.rs  config.rs  cut_vertex.rs  memory_aware.rs  mod.rs
crates/zk-fragment-core/src/witness/: mapper.rs  mod.rs  partitioner.rs
crates/zk-fragment-graph/: Cargo.toml
crates/zk-fragment-graph/examples/: build_graph.rs  fragmentation_demo.rs
crates/zk-fragment-graph/src/: lib.rs
crates/zk-fragment-graph/src/algorithms/: cut_vertex.rs  mod.rs  scc.rs  topological.rs  traversal.rs
crates/zk-fragment-graph/src/analysis/: metrics.rs  mod.rs  validation.rs  visualization.rs
crates/zk-fragment-graph/src/builder/: manual.rs  mod.rs  plonky2.rs
crates/zk-fragment-graph/src/types/: constraint.rs  graph.rs  mod.rs  wire.rs
crates/zk-fragment-prove/: Cargo.toml
crates/zk-fragment-prove/src/: execution_hash.rs  lib.rs
crates/zk-fragment-prove/src/capsule/: builder.rs  mod.rs  types.rs
crates/zk-fragment-prove/src/circuit/: boundary_input.rs  boundary_output.rs  execution_hash.rs  fragment_wrapper.rs  merkle_membership.rs  mod.rs
crates/zk-fragment-prove/src/commitment/: generator.rs  mod.rs  poseidon.rs  verifier.rs
crates/zk-fragment-prove/src/proof/: fragment_proof.rs  mod.rs  verification.rs
crates/zk-fragment-prove/src/prover/: checkpoint.rs  lib.rs  mod.rs  parallel.rs
crates/zk-fragment-prove/src/tests/: boundary_verification_tests.rs  commitment_tests.rs  integration_tests.rs  mod.rs  prover_tests.rs  witness_tests.rs
crates/zk-fragment-prove/src/witness/: boundary_witness.rs  extractor.rs  mod.rs
