[workspace]
resolver = "2"
members = [
    "crates/zk-fragment-graph",
    
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VIKRAM A : "]
license = "MIT"

[workspace.dependencies]
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git", branch = "main" }
plonky2_field = { git = "https://github.com/0xPolygonZero/plonky2.git", package = "plonky2_field", branch = "main" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Collections
indexmap = { version = "2.0", features = ["serde"] }
petgraph = "0.6"

# Testing
rand = "0.8"