[package]
name = "zk-fragment-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Constraint graph analysis for ZK circuits"

[dependencies]
plonky2.workspace = true
plonky2_field.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
indexmap.workspace = true
petgraph.workspace = true

[dev-dependencies]
env_logger.workspace = true
rand.workspace = true